--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content=device-width, initial-scale=1">
     <title>Voltum | Электромонтаж</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css"> <!-- Подключаем свой CSS -->
@@ -86,10 +86,10 @@
         <div class="container text-center">
             <h2 class="text-white">Свяжитесь с нами</h2>
             <p class="text-white">Оставьте заявку, и мы перезвоним вам в ближайшее время.</p>
-            <form class="row justify-content-center">
+            <form id="contact-form" class="row justify-content-center">
                 <div class="col-md-6">
-                    <input type="text" class="form-control mb-3" placeholder="Ваше имя">
-                    <input type="tel" class="form-control mb-3" placeholder="Ваш телефон">
+                    <input type="text" class="form-control mb-3" id="name" placeholder="Ваше имя">
+                    <input type="tel" class="form-control mb-3" id="phone" placeholder="Ваш телефон">
                     <button type="submit" class="btn btn-primary">Отправить заявку</button>
                 </div>
             </form>
@@ -101,7 +101,7 @@
         <p>© 2024 Voltum | Электромонтаж. Все права защищены.</p>
     </footer>
 
-    <!-- Подключение Bootstrap JS -->
+    <!-- Подключение JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
